New image, limited nav bar changes

--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-     <a href="#home" class="w3-bar-item w3-button">     VR + AR</a>  
+     <a href="#home" class="w3-bar-item w3-button"><img src="https://i.imgur.com/Q0fPw4H.png" width="80" height="80"> VR + AR</a>  
     
     <!-- Right-sided navbar links-->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#support" class="w3-bar-item w3-button">Support</a>
-      <a href="#shop" class="w3-bar-item w3-button">Shop</a>
-      <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+      <a href="https://c0achrachel.github.io/HEXX-ARVR/citations" class="w3-bar-item w3-button">Citations</a>
+      <a href="https://c0achrachel.github.io/HEXX-ARVR/references" class="w3-bar-item w3-button">References</a>
     </div>
   </div>
 </div>
