--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Re-design of TSA website design</title>
+  <title>HEXX AR/VR</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
