--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- partial:index.partial.html -->
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>HEXX AR/VR</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -117,11 +117,6 @@ h1, h2, h3, h4, h5, h6 {
   
 <!-- End page content -->
 </div>
-
-<!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-32">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
 
 </body>
 </html>
