--- a/references.html
+++ b/references.html
@@ -2,15 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - TSA Website Design Reference page 2</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>HEXX AR/VR</title>
+  <link rel="stylesheet" href="./referencessstyle.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>HEXX AR/VR</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -26,16 +26,22 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-   <a href="#home" class="w3-bar-item w3-button">    <img src="https://lh6.googleusercontent.com/57MWwLRiFHgio3m1qygNBzdborDpee7b693t5vMhiocrlyz3oUnhOdECCGiqeMAnrSjyxwNiJbd9DZFm94MvzQ33MJDn63wYk_oBoW6Z" width="80" height="80">      VR + AR</a>  
+     <a href="https://c0achrachel.github.io/HEXX-ARVR/citations" class="w3-bar-item w3-button"><img src="https://i.imgur.com/Q0fPw4H.png" width="80" height="80"> VR + AR</a>  
+    
     <!-- Right-sided navbar links-->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#support" class="w3-bar-item w3-button">Support</a>
-      <a href="#shop" class="w3-bar-item w3-button">Shop</a>
-      <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+      <a href="https://c0achrachel.github.io/HEXX-ARVR/citations" class="w3-bar-item w3-button">Citations</a>
+      <a href="https://c0achrachel.github.io/HEXX-ARVR/references" class="w3-bar-item w3-button">References</a>
     </div>
   </div>
 </div>
+
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+  <img class="w3-image" src="https://images.unsplash.com/flagged/photo-1563192395-7412e5fe58a7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1244&q=80" alt="VR headsets" width="1800" height="800">
+  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
+  </div>
+</header>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
@@ -60,11 +66,6 @@ h1, h2, h3, h4, h5, h6 {
   </div>
   
   <hr>
-
-<!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-32">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
 
 </body>
 </html>
