--- a/references.html
+++ b/references.html
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-     <a href="https://c0achrachel.github.io/HEXX-ARVR/citations" class="w3-bar-item w3-button"><img src="https://i.imgur.com/Q0fPw4H.png" width="80" height="80"> VR + AR</a>  
+     <a href="https://c0achrachel.github.io/HEXX-ARVR/" class="w3-bar-item w3-button"><img src="https://i.imgur.com/Q0fPw4H.png" width="80" height="80"> VR + AR</a>  
     
     <!-- Right-sided navbar links-->
     <div class="w3-right w3-hide-small">
