--- a/index.html
+++ b/index.html
@@ -105,14 +105,16 @@ h1, h2, h3, h4, h5, h6 {
       <br>
   <hr>
   
-  <!-- Support Section -->
+ <!-- Support Section -->
   <div class="w3-container w3-padding-64" id="support">
     <font size="+3">Support</font><br>
-    <p>Santi: gonzasan001@edmonds15.org</p>
-    <p>Jennifer: nguyejen018@edmonds15.org</p>
-    <p>Daniel: karpidan000@edmonds15.org</p>
-    <p> Rebecca: coatereb000@edmonds15.org</p>
-   
+    <a href="mailto: gonzasan001@edmonds15.org">Santi:gonzasan001@edmonds15.org</a>
+    <br>
+    <a href="mailto: karpidan000@edmonds15.org">Daniel:karpidan000@edmonds15.org</a>
+    <br>
+    <a href="mailto: -coatereb000@edmonds15.org">Rebecca:coatereb000@edmonds15.org</a>
+    <br>
+  <a href="mailto: nguyejen018@edmonds15.org">Jennifer: nguyejen018@edmonds15.org
   </div>
   
 <!-- End page content -->
