--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@ h1, h2, h3, h4, h5, h6 {
  <!-- Support Section -->
   <div class="w3-container w3-padding-64" id="support">
     <font size="+3">Support</font><br>
-    <a href="mailto: gonzasan001@edmonds15.org">Santi:gonzasan001@edmonds15.org</a>
+    <a href="mailto: gonzasan001@edmonds15.org">Santi: gonzasan001@edmonds15.org</a>
     <br>
-    <a href="mailto: karpidan000@edmonds15.org">Daniel:karpidan000@edmonds15.org</a>
+    <a href="mailto: karpidan000@edmonds15.org">Daniel: karpidan000@edmonds15.org</a>
     <br>
-    <a href="mailto: -coatereb000@edmonds15.org">Rebecca:coatereb000@edmonds15.org</a>
+    <a href="mailto: coatereb000@edmonds15.org">Rebecca:coatereb000@edmonds15.org</a>
     <br>
   <a href="mailto: nguyejen018@edmonds15.org">Jennifer: nguyejen018@edmonds15.org
   </div>
