--- a/citations.html
+++ b/citations.html
@@ -55,6 +55,8 @@ h1, h2, h3, h4, h5, h6 {
 
 
   <font size="+4">Citation___Page</font><br>
+  
+ <p> <a href= "https://drive.google.com/file/d/1PNJT0h4-dn7hFs6SQ58O9uHEO0lTcqcg/view?usp=sharing"> Copyright Sign offs</a></p>
   <ul>
   <li><a href="https://unsplash.com/">unsplash.com</a>
   <li><a href="https://unsplash.com/photos/GLgjpN4MWaw">Photo 1</a>
